DBJR-585: fix overflowing thumbnail images in follow-up listing

--- a/assets/front/less/components/common/cards.less
+++ b/assets/front/less/components/common/cards.less
@@ -4,6 +4,7 @@
 .card {
     &-image {
         display: inline-block;
+        max-width: 100%;
         height: 180px;
         overflow: hidden;
         border: 1px solid @gray-light;
